--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,11 +4,10 @@
       .header__inner__top__logo
         =link_to "/" do
           = image_tag '//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?863303983', alt: 'mercari', height: '36', width: '134'
-      %form.header__inner__top__form
-        = form_tag('items/search', method: :get) do
-          %input.search__query.header__inner__top__form__input{name:"keyword", value:"", placeholder:"何かお探しですか？"}
-          = link_to search_items_path do
-            %i.fa.fa-search
+      = link_to items_path do    
+        %form.header__inner__top__form
+          %input.header__inner__top__form__input{name:"keyword", value:"", placeholder:"何かお探しですか？"}
+          %i.fa.fa-search
     .header__inner__main
       .header__inner__main__left
         %nav.header__inner__main__left__nav
