検索機能Lv2修正

--- a/app/views/items/root.html.haml
+++ b/app/views/items/root.html.haml
@@ -63,8 +63,8 @@
           ベビー・キッズ 新着アイテム
       =render 'picup_content',{ items: @child_items }
       .pickup__view-all
-        = link_to "/" do
-          すべての商品を見る
+        = link_to "/" 
+        すべての商品を見る
 
 .main-contents
   .pickup
