--- a/app/views/layouts/_drop-mypage.html.haml
+++ b/app/views/layouts/_drop-mypage.html.haml
@@ -13,7 +13,8 @@
           %p
             評価: 0
           %p
-            出品数: 0
+            出品数: 
+            = item_count(current_user)
       %li.drop-list
         = link_to"/" do 
           出品した商品 - 出品中
