--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -298,6 +298,38 @@
   font-size: 24px;
 }
 
+.item-details-buy-btn-gray{
+  height: 60px;
+  line-height: 60px;
+  display: block;
+  margin: 16px 0 0;
+  background: #888888;
+  color: #fff;
+  text-align: center;
+  font-weight: 600;
+  transition: all ease-out .3s;
+  font-size: 24px;
+  color: #fff;
+}
+
+.sold{
+  position: absolute;
+  top: 0px;
+  color: white;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 100px 100px 0 0;
+  border-color: #EA352E transparent transparent transparent;
+  p{
+    position: absolute;
+    top: -80px;
+    font-size: 20px;
+    font-weight: bold;
+    transform: rotate(-45deg);
+    letter-spacing: 2px;
+  }
+}
 
 
 #item-details-buttons-left-report{
