--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -44,6 +44,25 @@
       height: 213px;
       width: 213px;
       object-fit: cover;
+      position: relative;
+    }
+    .sold{
+      position: absolute;
+      top: 0px;
+      color: white;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 100px 100px 0 0;
+      border-color: #EA352E transparent transparent transparent;
+      p{
+        position: absolute;
+        top: -80px;
+        font-size: 20px;
+        font-weight: bold;
+        transform: rotate(-45deg);
+        letter-spacing: 2px;
+      }
     }
     }
     &__body {
