--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -86,6 +86,34 @@
                 margin: 8px 0 20px;
               }
             }
+            .search-category{
+              width:280px;
+              height: 48px;
+              margin-top: 40px;
+              margin-bottom:80px;
+              #q_category_id_eq{
+                margin-top:10px;
+                padding-left:10px;
+                background: #fff;
+                width:260px;
+                height: 48px;
+                font-size:15px;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                padding-right:0.3em;
+                list-style-type:none;
+                cursor: pointer;
+              }
+              .fas1{
+                pointer-events: none;
+                position: relative;
+                left: 230px;
+                top: -36px;
+                font-size: 25px;
+                color: #888;
+              }
+            }
             .search-size{
               width:280px;
               height: 48px;
