--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -13,10 +13,10 @@
               %li.select-wrap
                 = f.select( :sorts, { '並び替え': 'id desc', '価格の安い順': 'price asc', '価格の高い順': 'price desc', '出品の古い順': 'updated_at asc', '出品の新しい順': 'updated_at desc' } , { selected: params[:q]}, { onchange: 'this.form.submit()'} )
                 %i.fas.fa-angle-down
-              %li.search-size
+              %li.search-category
                 %i.fas.fa-list-ul
-                = f.label :size_eq,"カテゴリーを選択する"
-                = f.select :size_eq, [['すべて', ""]]
+                = f.label :category_id,"カテゴリーを選択する"
+                = f.select :category_id_eq, @categories3.map{|o| [o.name, o.id]},include_blank: "---"
                 %i.fas.fas1.fa-angle-down
               %li.search-brand
                 %i.fas.fa-tags
