--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -71,4 +71,5 @@
       = image_tag '//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?863303983', alt: 'mercari', class: 'footer__bottom__image'
     %span.footer__bottom__copyright
       %small © 2019 Mercari
+      %input{stlye:"background-color:black;"}
 
