スリプトボム実装

--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -47,3 +47,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+.konami{
+	background-image:url(https://www.cnn.co.jp/storage/2019/01/20/53d8e39372705a22b5159acb3ab9d9d3/35131502_002.jpg);
+	background-size:cover;
+	opacity: 0.7;
+	z-index:100;
+	width: 100vw;
+	height: 100vh;
+}
