--- a/app/assets/stylesheets/_login_page.scss
+++ b/app/assets/stylesheets/_login_page.scss
@@ -62,11 +62,10 @@
           }
         }
         &__reCAPTCHA{
-          background-image:url(https://i.gyazo.com/655e123782dd5cec89127e1a914e64c8.png);
-          background-size:cover;
           width: 343px;
           height: 90px;
-          margin-top: 73px;
+          margin-left:20px;
+          margin-top: 90px;
         }
       li{
         max-width: 343px;
