--- a/app/assets/stylesheets/_1signup_page.scss
+++ b/app/assets/stylesheets/_1signup_page.scss
@@ -159,11 +159,10 @@
           line-height: 1.5;
         }
         &__reCAPTCHA{
-          background-image:url(https://i.gyazo.com/655e123782dd5cec89127e1a914e64c8.png);
-          background-size:cover;
           width: 343px;
           height: 90px;
-          margin-left:5px;
+          margin-left:25px;
+          margin-top: 50px;
         }
         &__next{
           word-wrap: normal;
