--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title FreemarketSample56c
     %script{src: "https://js.pay.jp/", type: "text/javascript"}
+    %script{src: "https://www.google.com/recaptcha/api.js"}
     = csrf_meta_tags
     = csp_meta_tag
     %link{:href => "https://use.fontawesome.com/releases/v5.6.1/css/all.css", :rel => "stylesheet"}/
